fix sign form wrap width

--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ hr {
         padding-left: 3rem;
     }
     .sign-form-wrap {
-        width: 40%;
+        width: 50%;
     }
 }
 @media (max-width: 600px) {
